--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "work-flow-designer",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,18 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@vue-flow/background": "^1.2.0",
     "@vue-flow/controls": "^1.1.0",
     "@vue-flow/core": "^1.20.2",
     "@vue-flow/minimap": "^1.1.1",
     "@vue-flow/node-resizer": "^1.3.2",
     "@vue-flow/node-toolbar": "^1.1.0",
-    "vue": "^3.3.4"
+    "fast-glob": "^3.2.12",
+    "sass": "^1.63.4",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vue": "^3.3.4",
+    "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
