--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vue-flow/minimap": "^1.1.1",
     "@vue-flow/node-resizer": "^1.3.2",
     "@vue-flow/node-toolbar": "^1.1.0",
+    "@vueuse/core": "^10.2.0",
     "fast-glob": "^3.2.12",
     "sass": "^1.63.4",
     "vite-plugin-svg-icons": "^2.0.1",
