优化toolbar功能 新增历史记录功能

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@rollup/plugin-commonjs": "^25.0.1",
     "@vue-flow/background": "^1.2.0",
     "@vue-flow/controls": "^1.1.0",
     "@vue-flow/core": "^1.20.2",
@@ -18,7 +19,8 @@
     "@vue-flow/node-toolbar": "^1.1.0",
     "@vueuse/core": "^10.2.0",
     "fast-glob": "^3.2.12",
-    "sass": "^1.63.4",
+    "rollup-plugin-visualizer": "^5.9.2",
+    "sass": "^1.63.6",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2"
