--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.63.6",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vue": "^3.3.4",
-    "vue-i18n": "^9.2.2"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
