优化lib包功能 优化打lib包引出的部分组件BUG

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "work-flow-designer",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.1.0",
+  "private": false,
+  "author": "molian-Z",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
