--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "work-flow",
+  "name": "@molian-z/flow-designer",
   "version": "0.1.0",
   "private": false,
   "author": "molian-Z",
