--- a/public/package.json
+++ b/public/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "work-flow",
+  "name": "@molian-z/flow-designer",
   "version": "0.1.0",
   "private": false,
   "description": "",
   "author": "molian-Z",
-  "main": "./flow-designer.umd.js",
+  "main": "./index.umd.js",
   "keywords": [
-    "work-flow",
+    "flow-designer",
     "vue3",
     "vue",
     "vueflow",
