修复打包后引出的bug

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@molian-z/flow-designer",
-  "version": "0.5.1",
+  "version": "0.5.5",
   "private": false,
   "author": "molian-Z",
   "homepage": "https://github.com/molian-Z/flow-designer#readme",
@@ -8,6 +8,7 @@
     "type": "git",
     "url": "git+https://github.com/molian-Z/flow-designer.git"
   },
+  "main": "./install.js",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
