--- a/public/package.json
+++ b/public/package.json
@@ -5,6 +5,8 @@
   "description": "",
   "author": "molian-Z",
   "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
+  "types":"./dist/index.d.ts",
   "keywords": [
     "flow-designer",
     "vue",
