--- a/public/package.json
+++ b/public/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@molian-z/flow-designer",
-  "version": "0.7.10",
+  "version": "0.8.1",
   "private": false,
   "description": "",
   "author": "molian-Z",
   "main": "./dist/index.umd.js",
   "module": "./dist/index.es.js",
-  "types":"./dist/index.d.ts",
+  "types":"./dist/src/main.d.ts",
   "keywords": [
     "flow-designer",
     "vue",
